--- a/home.html
+++ b/home.html
@@ -19,5 +19,15 @@
 
 				<div class="clear"></div>
 			</ul>
+			<br/> <br/> <br/>
+
+<p class="writeup col-md-5">
+Every object has a story to tell, eagerly waiting for a perfect narrator to come by.
+ <br/>Well! That’s where we come hereby,<br/> 
+			“<span class="ita">The Mini Frames</span>” is a film production house, <br/> which makes short films, dance films, after-movies,trailers,music cover videos, advertisements which makes you douce. 
+			<br/> <b>
+You name it, we do it professionally.
+</b>
+</p>
 </body>
 </html>
